--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -10,6 +10,7 @@
         <file alias="ToolBar.qml">contents/ui/textEditor/ToolBar.qml</file>
         <file alias="TextDisplay.qml">contents/ui/textEditor/TextDisplay.qml</file>
         <file alias="Editor.qml">contents/ui/textEditor/Editor.qml</file>
+        <file alias="BottomToolBar.qml">contents/ui/textEditor/BottomToolBar.qml</file>
         <file alias="Sidebar.qml">contents/ui/sideBar/Sidebar.qml</file>
         <file alias="TreeView.qml">contents/ui/sideBar/TreeView.qml</file>
         </qresource>
