--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -5,13 +5,19 @@
 <RCC>
     <qresource prefix="/">
         <file alias="main.qml">contents/ui/main.qml</file>
-        <file alias="About.qml">contents/ui/About.qml</file>
-        <file alias="baseDoc.html">contents/ui/textEditor/baseDoc.html</file>
-        <file alias="ToolBar.qml">contents/ui/textEditor/ToolBar.qml</file>
+
+        <file alias="About.qml">contents/ui/pages/About.qml</file>
+        <file alias="MainPage.qml">contents/ui/pages/MainPage.qml</file>
+        <file alias="BottomToolBar.qml">contents/ui/textEditor/BottomToolBar.qml</file>
+
+        <file alias="TextToolBar.qml">contents/ui/textEditor/TextToolBar.qml</file>
         <file alias="TextDisplay.qml">contents/ui/textEditor/TextDisplay.qml</file>
         <file alias="Editor.qml">contents/ui/textEditor/Editor.qml</file>
-        <file alias="BottomToolBar.qml">contents/ui/textEditor/BottomToolBar.qml</file>
+
+        <file alias="baseDoc.html">contents/ui/textEditor/baseDoc.html</file>
+
         <file alias="Sidebar.qml">contents/ui/sideBar/Sidebar.qml</file>
         <file alias="TreeView.qml">contents/ui/sideBar/TreeView.qml</file>
-        </qresource>
+        <file alias="ActionBar.qml">contents/ui/sideBar/ActionBar.qml</file>
+    </qresource>
 </RCC>
