--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -19,5 +19,8 @@
         <file>contents/ui/sideBar/Sidebar.qml</file>
         <file>contents/ui/sideBar/TreeView.qml</file>
         <file>contents/ui/sideBar/ActionBar.qml</file>
+
+        <file>contents/ui/dialogs/StorageDialog.qml</file>
+        <file>contents/ui/dialogs/FolderChooserDialog.qml</file>
     </qresource>
 </RCC>
