--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -4,6 +4,8 @@
 -->
 <RCC>
     <qresource prefix="/">
+        <file alias="Checker.js">contents/logic/Checker.js</file>
+
         <file>contents/ui/main.qml</file>
 
         <file>contents/ui/pages/AboutPage.qml</file>
@@ -11,10 +13,9 @@
 
         <file>contents/ui/textEditor/TextToolBar.qml</file>
         <file>contents/ui/textEditor/TextDisplay.qml</file>
-        <file>contents/ui/textEditor/Editor.qml</file>
+        <file>contents/ui/textEditor/TextEditor.qml</file>
+        <file>contents/ui/textEditor/EditorView.qml</file>
         <file>contents/ui/textEditor/BottomToolBar.qml</file>
-
-        <file>contents/ui/textEditor/baseDoc.html</file>
 
         <file>contents/ui/sideBar/Sidebar.qml</file>
         <file>contents/ui/sideBar/TreeView.qml</file>
@@ -26,5 +27,15 @@
         <file>contents/ui/dialogs/FolderChooserDialog.qml</file>
         <file>contents/ui/dialogs/RenameErrorDialog.qml</file>
         <file>contents/ui/dialogs/NamingDialog.qml</file>
+
+        <file>contents/ui/dialogs/colorDialog/ColorDialog.qml</file>
+        <file>contents/ui/dialogs/colorDialog/ColorPicker.qml</file>
+        <file>contents/ui/dialogs/colorDialog/HSPicker.qml</file>
+        <file>contents/ui/dialogs/colorDialog/ValueSlider.qml</file>
+
+        <file alias="qwebchannel.js">contents/resources/qwebchannel.js</file>
+        <file alias="index.html">contents/resources/index.html</file>
+        <file alias="markdown.css">contents/resources/3rdparty/markdown.css</file>
+        <file alias="marked.js">contents/resources/3rdparty/marked.js</file>
         </qresource>
 </RCC>
