adding image picker dialogs

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -23,11 +23,14 @@
         <file>contents/ui/sideBar/TreeView.qml</file>
 
         <file>contents/ui/dialogs/DeleteConfirmationDialog.qml</file>
+        <file>contents/ui/dialogs/FilePickerDialog.qml</file>
         <file>contents/ui/dialogs/FolderChooserDialog.qml</file>
         <file>contents/ui/dialogs/FontDialog.qml</file>
+        <file>contents/ui/dialogs/ImagePickerDialog.qml</file>
         <file>contents/ui/dialogs/NamingDialog.qml</file>
         <file>contents/ui/dialogs/RenameErrorDialog.qml</file>
         <file>contents/ui/dialogs/StorageDialog.qml</file>
+        <file>contents/ui/dialogs/URLDialog.qml</file>
 
         <file>contents/ui/dialogs/colorDialog/ColorDialog.qml</file>
         <file>contents/ui/dialogs/colorDialog/ColorPicker.qml</file>
