--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -30,6 +30,7 @@
         <file>contents/ui/dialogs/NamingDialog.qml</file>
         <file>contents/ui/dialogs/NamingErrorDialog.qml</file>
         <file>contents/ui/dialogs/StorageDialog.qml</file>
+        <file>contents/ui/dialogs/TableMakerDialog.qml</file>
         <file>contents/ui/dialogs/URLDialog.qml</file>
 
         <file>contents/ui/dialogs/colorDialog/ColorDialog.qml</file>
