--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -15,6 +15,7 @@
         <file>contents/ui/dialogs/NamingErrorDialog.qml</file>
         <file>contents/ui/dialogs/StorageDialog.qml</file>
         <file>contents/ui/dialogs/TableMakerDialog.qml</file>
+        <file>contents/ui/dialogs/ToDoDialog.qml</file>
         <file>contents/ui/dialogs/URLDialog.qml</file>
 
         <file>contents/ui/dialogs/colorDialog/ColorDialog.qml</file>
