--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -8,6 +8,7 @@
 
         <file>contents/ui/dialogs/DeleteConfirmationDialog.qml</file>
         <file>contents/ui/dialogs/FilePickerDialog.qml</file>
+        <file>contents/ui/dialogs/FileSaverDialog.qml</file>
         <file>contents/ui/dialogs/FolderPickerDialog.qml</file>
         <file>contents/ui/dialogs/FontPickerDialog.qml</file>
         <file>contents/ui/dialogs/ImagePickerDialog.qml</file>
