Adding better note display settings support

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -32,6 +32,8 @@
         <file>contents/ui/painting/ColorBar.qml</file>
         <file>contents/ui/painting/ColorButton.qml</file>
 
+        <file>contents/ui/settings/DisplayPreview.qml</file>
+
         <file>contents/ui/sideBar/ActionBar.qml</file>
         <file>contents/ui/sideBar/ContextMenu.qml</file>
         <file>contents/ui/sideBar/SearchBar.qml</file>
