--- a/src/contents/resources/style/KleverStyle.css
+++ b/src/contents/resources/style/KleverStyle.css
@@ -85,7 +85,7 @@ hr {
     margin: 0 0 19px;
     border: 0;
     height: 2px;
-    background-image: linear-gradient(90deg, transparent, transparent 50%, var(--bodyColor) 50%, var(--bodyColor) 100%), linear-gradient(90deg, var(--bodyColor), var(--linkColor), var(--linkColor), var(--linkColor), var(--bodyColor));
+    background-image: linear-gradient(90deg, transparent, transparent, var(--linkColor), var(--linkColor), var(--linkColor), transparent, transparent);
     background-size: 10px 2px, 100% 2px;
     border: none;
 }
