--- a/src/contents/resources/style/Avenir.css
+++ b/src/contents/resources/style/Avenir.css
@@ -1,3 +1,13 @@
+:root {
+    --bodyColor: ;
+    --font: ;
+    --textColor: ;
+    --titleColor: ;
+    --linkColor: ;
+    --visitedLinkColor: ;
+    --codeColor: ;
+}
+
 body {
     font-family: var(--font), sans-serif;
     padding: 1em;
