--- a/src/contents/resources/style/Style9.css
+++ b/src/contents/resources/style/Style9.css
@@ -1,3 +1,13 @@
+:root {
+    --bodyColor: ;
+    --font: ;
+    --textColor: ;
+    --titleColor: ;
+    --linkColor: ;
+    --visitedLinkColor: ;
+    --codeColor: ;
+}
+
 h1, h2, h3, h4, h5, h6, p, blockquote {
     margin: 0;
     padding: 0;
