--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -53,6 +53,8 @@
         <file>contents/ui/sideBar/TreeView.qml</file>
 
         <file alias="contents/ui/textEditor/BottomToolBar.qml">@CMAKE_CURRENT_BINARY_DIR@/contents/ui/textEditor/BottomToolBar.qml</file>
+        <file>contents/ui/textEditor/components/CheatSheetEntry.qml</file>
+        <file>contents/ui/textEditor/CheatSheet.qml</file>
         <file>contents/ui/textEditor/EditorView.qml</file>
         <file>contents/ui/textEditor/TextDisplay.qml</file>
         <file>contents/ui/textEditor/TextEditor.qml</file>
