--- a/src/contents/resources/style/KleverStyle.css
+++ b/src/contents/resources/style/KleverStyle.css
@@ -81,6 +81,8 @@ p, ul, ol, dl, li, table, pre {
     margin: 15px 0;
 }
 
+
+
 hr {
     margin: 0 0 19px;
     border: 0;
@@ -247,7 +249,7 @@ code {
 pre code {
     margin: 0;
     padding: 0;
-    white-space: pre;
+    white-space: pre-wrap;
     border: none;
     background: transparent;
     font-family: monospace;
