Splitting settings into different tabs

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -42,10 +42,14 @@
         <file>contents/ui/painting/ColorBar.qml</file>
         <file>contents/ui/painting/ColorButton.qml</file>
 
+        <file>contents/ui/settings/AppearanceTab.qml</file>
         <file>contents/ui/settings/DisplayPreview.qml</file>
         <file>contents/ui/settings/ExpendingFormCheckBox.qml</file>
         <file>contents/ui/settings/FontPicker.qml</file>
+        <file>contents/ui/settings/GeneralTab.qml</file>
+        <file>contents/ui/settings/PluginsTab.qml</file>
         <file>contents/ui/settings/SettingsColorButton.qml</file>
+        <file>contents/ui/settings/TabBar.qml</file>
 
         <file>contents/ui/sideBar/ActionBar.qml</file>
         <file>contents/ui/sideBar/ContextMenu.qml</file>
