Adding highlight color based on link color

--- a/src/contents/resources/style/Avenir.css
+++ b/src/contents/resources/style/Avenir.css
@@ -114,6 +114,9 @@ a:visited {
     color: var(--visitedLinkColor);
 }
 
+mark {
+    background-color: var(--linkColor);
+}
 
 code, pre {
     font-family: var(--codeFont), monospace;
