--- a/src/contents/resources/style/Avenir.css
+++ b/src/contents/resources/style/Avenir.css
@@ -7,6 +7,7 @@
     --linkColor: ;
     --visitedLinkColor: ;
     --codeColor: ;
+    --highlightColor: ;
     --codeFont: ;
     --codeFontSize: ;
 }
@@ -115,7 +116,7 @@ a:visited {
 }
 
 mark {
-    background-color: var(--linkColor);
+    background-color: var(--highlightColor);
 }
 
 code, pre {
