--- a/src/contents/resources/style/KleverStyle.css
+++ b/src/contents/resources/style/KleverStyle.css
@@ -7,6 +7,7 @@
     --linkColor: ;
     --visitedLinkColor: ;
     --codeColor: ;
+    --highlightColor: ;
     --codeFont: ;
     --codeFontSize: ;
 }
@@ -120,7 +121,7 @@ li::marker {
 }
 
 mark {
-    background-color: var(--linkColor);
+    background-color: var(--highlightColor);
 }
 
 /* For custom checkbox
