--- a/src/contents/resources/style/Style7.css
+++ b/src/contents/resources/style/Style7.css
@@ -7,6 +7,7 @@
     --linkColor: ;
     --visitedLinkColor: ;
     --codeColor: ;
+    --highlightColor: ;
     --codeFont: ;
     --codeFontSize: ;
 }
@@ -131,7 +132,7 @@ hr {
 }
 
 mark {
-    background-color: var(--linkColor);
+    background-color: var(--highlightColor);
 }
 
 body > h2:first-child {
