--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -24,6 +24,12 @@
         <file>contents/ui/dialogs/colorDialog/HSPicker.qml</file>
         <file>contents/ui/dialogs/colorDialog/LightnessSlider.qml</file>
 
+        <file>contents/ui/dialogs/emojiDialog/EmojiDelegate.qml</file>
+        <file>contents/ui/dialogs/emojiDialog/EmojiDialog.qml</file>
+        <file>contents/ui/dialogs/emojiDialog/EmojiGrid.qml</file>
+        <file>contents/ui/dialogs/emojiDialog/EmojiPicker.qml</file>
+        <file>contents/ui/dialogs/emojiDialog/EmojiTonesPicker.qml</file>
+
         <file>contents/ui/dialogs/imagePickerDialog/ButtonDelegate.qml</file>
         <file>contents/ui/dialogs/imagePickerDialog/ImagePickerDialog.qml</file>
 
