--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -80,6 +80,7 @@
         <file>contents/ui/todoEditor/ToDoView.qml</file>
 
         <file alias="index.html">contents/resources/index.html</file>
+        <file alias="qwebchannel.js">contents/resources/qwebchannel.js</file>
 
         <file alias="Avenir.css">contents/resources/style/Avenir.css</file>
         <file alias="KleverStyle.css">contents/resources/style/KleverStyle.css</file>
